--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,3 +5,6 @@
     <link rel="stylesheet" type="text/css" href="/public/main.css" />
   </head>
   <body>
+    <div class="hero">
+      <h1>Hackaday.io</h1>
+    </div>
