--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,7 @@
   <head>
     <title>Patrick Metsch</title>
     <link rel="stylesheet" type="text/css" href="/public/main.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   </head>
   <body>
     <div class="hero">
