--- a/public/main.css
+++ b/public/main.css
@@ -82,7 +82,10 @@ body {
 .projects-list-container ul li {
   list-style-type: none;
 }
-.projects-list-container ul li .project {
+.projects-list-container ul li a {
+  text-decoration: none;
+}
+.projects-list-container ul li a .project {
   background-color: #222;
   border-bottom: 1px solid #000;
   padding: 1rem 0.5rem;
