--- a/src/styles/components/_variables.scss
+++ b/src/styles/components/_variables.scss
@@ -5,6 +5,7 @@ $black: #000;
 $dark: #171717;
 $mid: #222;
 $light: #737373;
+$bright: #E9E9E9;
 
 // Accents
 $highlight: #c19f54;
@@ -13,3 +14,9 @@ $highlight: #c19f54;
 // SCREEN
 $maxMobileScreenWidth: 740px;
 $maxTabletScreenWidth: 1024px;
+
+
+// SPACING
+$xSpacing: 9rem;
+$xSpacingTablet: 4rem;
+$xSpacingMobile: 1rem;
