--- a/src/styles/components/_projectDetail.scss
+++ b/src/styles/components/_projectDetail.scss
@@ -74,6 +74,25 @@
 				font-size: 1.5rem;
 			}
 		}
+
+		.related-projects {
+			display: flex;
+			flex-direction: column;
+
+			h3 {
+				color: $bright;
+				font-size: 1.5rem;
+				margin-bottom: 1rem;
+			}
+
+			.primary-button {
+				margin-bottom: .5rem;
+
+				&:hover {
+					background-color: #9c8148;
+				}
+			}
+		}
 	}
 }
 
