--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -23,21 +23,21 @@
 	</div>
 	<div class="pagination">
 		<% if(page > 1){ %>
-			<a href="/projects/page/<%= page - 1 %>">&lt;</a>
-			<a class="desktop-only" href="/projects/page/1">1</a>
+			<a class="primary-button" href="/projects/page/<%= page - 1 %>">&lt;</a>
+			<a class="primary-button desktop-only" href="/projects/page/1">1</a>
 			<span class="desktop-only">...</span>
 		<% } %>
 
 		<% if(page + 3 <= lastPage ) { %>
 			<% Array.from({length: 3}, (_, i) => page + (i + 1)).map(a => { %>
-				<a class="desktop-only" href="/projects/page/<%= a %>"><%= a %></a>
+				<a class="primary-button desktop-only" href="/projects/page/<%= a %>"><%= a %></a>
 			<% }); %>
 		<% } %>
 
 		<% if(page != lastPage){ %>
 			<span class="desktop-only">...</span>
-			<a class="desktop-only" href="/projects/page/<%= lastPage %>"><%= lastPage %></a>
-			<a href="/projects/page/<%=page + 1%>">&gt;</a>
+			<a class="primary-button desktop-only" href="/projects/page/<%= lastPage %>"><%= lastPage %></a>
+			<a class="primary-button" href="/projects/page/<%=page + 1%>">&gt;</a>
 		<% } %>
 	</div>
 <%- include ('partials/footer') %>
