--- a/src/styles/components/_projectsList.scss
+++ b/src/styles/components/_projectsList.scss
@@ -9,11 +9,15 @@
 
 			a {
 				text-decoration: none;
-				
+
 				.project {
 					background-color: $mid;
 					border-bottom: 1px solid $black;
 					padding: 1rem 0.5rem;
+
+					&:hover {
+						background-color: $midLight;
+					}
 				}
 			}
 		}
