--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   </head>
   <body>
+    <nav>
+      <div class="brand-container">
+        <h1>PatrickMetsch.io</h1>
+      </div>
+      <div class="nav-container">
+        <a class="primary-link" href="/projects/page/1">Projects</a>
+        <a target="_blank" href="https://hackaday.com/">Hackaday</a>
+        <a target="_blank" href="https://dev.hackaday.io">API Docs</a>
+      </div>
+    </nav>
     <div class="hero">
-      <h1>Hackaday.io</h1>
+      <h1><%= heroText %></h1>
     </div>
