--- a/views/projectDetails.ejs
+++ b/views/projectDetails.ejs
@@ -1,4 +1,4 @@
-<%- include ('partials/header') %>
+<%- include ('partials/header', { heroText: "Project Details"}) %>
 	<div class="container product-details">
 		<div class="header">
 			<h1><%= project.name %></h1>
